@@ -2,6 +2,8 @@
 	* src/text.c (add_undo): Only skip adding an undo when the current
 	action equals the last action.  This condition is needed for when
 	typing text is broken by an undo+redo.  Fixes Savannah bug #46323.
+	* src/text.c (do_redo): Check for "nothing to redo" earlier, so we
+	can restore the possible warning about an internal error.
 
 2015-10-29  David Lawrence Ramsey  <pooka109@gmail.com>
 	* src/files.c (do_writeout), src/nano.c (no_current_file_name_warning,
